[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jencrypt"
author = "JamesZBL@github.com"
author-email = "zhengbaole@gmail.com"
home-page = "https://github.com/JamesZBL/jencrypt"
classifiers = ["License :: OSI Approved :: Apache Software License"]
description-file = "README.md"

[tool.flit.scripts]
jencrypt = "jencrypt.bootstrap:main"
